--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
     const appData = require(`./data`);
     const WZ = require(`./lib/Wanez`);
     require(`./inc`);
-    //require('./updater.js');
+    require('./updater.js');
 </script>
 </body>
 </html>
